# markdspiral

./: CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md
resources/: icons.qrc  markdspiral.desktop  styles.qrc
resources/css/gitlab/: gitlab.css
src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  processmanager.cpp  processmanager.h
src/editor/: dictionaryprovider.cpp  dictionaryprovider.h  editor.cpp  editor.h  markdownhighlighter.cpp  markdownhighlighter.h
src/utils/: mimefinderworker.cpp  mimefinderworker.h
src/widgets/: GitFileStatus.h  filesystemtree.cpp  filesystemtree.h  gitbranchdialog.cpp  gitbranchdialog.h  gitbranchdialog.ui  gitfilestatusitemdelegate.cpp  gitfilestatusmodel.h  gitfilesview.h  gitwidget.cpp  gitwidget.h  gitwidget.ui  markdownwebpage.cpp  markdownwebpage.h  runningprocesseslabel.cpp  runningprocesseslabel.h  textinputdialog.cpp  textinputdialog.h  textinputdialog.ui
